--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.49MB/s(Youtube:不良林), server: 43.154.155.125, port: 46409, type: vmess, uuid: 6bfe39c7-3608-4d2c-81ae-5b8d65ed5a93, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 43.154.155.125}}
-  - {name: 🇺🇸 美国-1006.4KB/s(Youtube:不良林), server: 107.173.166.160, port: 11188, type: vmess, uuid: d644ebef-f0e6-468f-d122-cea661ed9d09, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 107.173.166.160}}
-  - {name: 🇺🇸 美国-221.3KB/s(Youtube:不良林), server: test.johnnyz.tk, port: 21997, type: vmess, uuid: d27f450c-e9e4-4427-90bf-42020401c1ad, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /johnnyz996, ws-headers: {Host: test.johnnyz.tk}}
-  - {name: 🇨🇳 中国-564.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-2.67MB/s(Youtube:不良林), server: hk.ypd2022.xyz, port: 34889, type: vmess, uuid: db010268-8cfc-4287-8e9c-dccaa58518d6, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-305.6KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇰🇷 韩国-1.47MB/s(Youtube:不良林), server: 146.56.103.73, port: 14003, type: vmess, uuid: b294b95e-71cc-4cbb-cf4b-6b6ad8fb3d00, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.60MB/s(Youtube:不良林), server: 14.119.87.189, port: 45239, type: vmess, uuid: 551e7763-47f2-4682-ab0f-9c3c59298a72, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 14.119.87.189}}
-  - {name: 🇨🇳 中国-10.57MB/s(Youtube:不良林), server: 116.63.103.11, port: 45184, type: vmess, uuid: 551e7763-47f2-4682-ab0f-9c3c59298a72, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
-  - {name: 未知国家-651.2KB/s(Youtube:不良林), server: xiexi.tk, port: 2096, type: vmess, uuid: 37551ca0-8cc3-432f-ca1f-82aba1db3ef9, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: xiexi.tk}}
+  - {name: 🇨🇳 中国-254.0KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇸🇬 新加坡-2.55MB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.00MB/s(Youtube:不良林), server: 216.24.248.104, port: 29862, type: vmess, uuid: 281f345f-da96-485b-9aa3-4bc530f2ffa2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /fdsfa, ws-headers: {Host: 216.24.248.104}}
+  - {name: 🇷🇺 俄罗斯联邦-817.5KB/s(Youtube:不良林), server: 176.119.156.229, port: 852, type: vmess, uuid: 35b021ff-cf42-4b32-aeb7-4f634363df40, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 176.119.156.229}}
+  - {name: 🇺🇸 美国-199.3KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-1.22MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-805.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-882.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-729.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-968.7KB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-221.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-564.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.6KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.57MB/s(Youtube:不良林)
-      - 未知国家-651.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-817.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-199.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-882.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-729.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-968.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-221.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-564.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.6KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.57MB/s(Youtube:不良林)
-      - 未知国家-651.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-817.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-199.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-882.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-729.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-968.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-221.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-564.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.6KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.57MB/s(Youtube:不良林)
-      - 未知国家-651.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-817.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-199.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-882.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-729.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-968.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.67MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-221.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-564.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.6KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.57MB/s(Youtube:不良林)
-      - 未知国家-651.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-817.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-199.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-882.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-729.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-968.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-221.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-564.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.6KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.57MB/s(Youtube:不良林)
-      - 未知国家-651.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-817.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-199.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-882.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-729.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-968.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-221.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-564.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.6KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.57MB/s(Youtube:不良林)
-      - 未知国家-651.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-817.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-199.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-882.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-729.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-968.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-221.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-564.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.6KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.57MB/s(Youtube:不良林)
-      - 未知国家-651.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-817.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-199.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-882.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-729.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-968.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
